--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -4,7 +4,7 @@ name: Generate Snake
 on:
   schedule:
     # run automatically every 2 hours
-    - cron: "0 9/2 * * *"
+    - cron: "0 0 12 * * ?"
 
   # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
