--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -69,7 +69,6 @@ jobs:
           plugin_lines: yes
           plugin_lines_history_limit: 2
           plugin_lines_repositories_limit: 4
-          plugin_lines_sections: base: repos
           plugin_notable: yes
           plugin_notable_from: user
           plugin_notable_indepth: yes
@@ -81,11 +80,10 @@ jobs:
           plugin_skyline_frames: 60
           plugin_skyline_quality: 0.5
           plugin_skyline_settings: {
-  "url": "https://skyline.github.com/${login}/${year}",
-  "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
-  "wait": 1,
-  "hide": "button, footer, a"
-}
+            "url": "https://skyline.github.com/${login}/${year}",
+            "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
+            "wait": 1,
+            "hide": "button, footer, a"}
 
           plugin_skyline_year: current-year
           plugin_stars: yes
