--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,8 +17,6 @@ jobs:
           # Your GitHub token
           # The following scopes are required:
           #  - public_access (default scope)
-          #  - public_repo
-          #  - read:project
           # The following additional scopes may be required:
           #  - read:org      (for organization related metrics)
           #  - read:user     (for user related data)
@@ -33,18 +31,8 @@ jobs:
           config_octicon: yes
           config_timezone: Asia/Shanghai
           config_twemoji: yes
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
-          plugin_followup: yes
-          plugin_followup_archived: yes
-          plugin_followup_indepth: yes
-          plugin_followup_sections: repositories
-          plugin_fortune: yes
-          plugin_gists: yes
           plugin_habits: yes
-          plugin_habits_charts_type: chartist
+          plugin_habits_charts_type: classic
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_from: 200
@@ -59,7 +47,6 @@ jobs:
           plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_ignored: scss,less,css,html
           plugin_languages_limit: 8
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
@@ -67,34 +54,14 @@ jobs:
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
           plugin_lines: yes
-          plugin_lines_history_limit: 2
+          plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 4
-          plugin_notable: yes
-          plugin_notable_from: user
-          plugin_notable_indepth: yes
-          plugin_notable_repositories: yes
-          plugin_notable_types: commit
-          plugin_projects: yes
-          plugin_projects_limit: 4
-          plugin_skyline: yes
-          plugin_skyline_frames: 60
-          plugin_skyline_quality: 0.5
-          plugin_skyline_settings: {
-            "url": "https://skyline.github.com/${login}/${year}",
-            "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
-            "wait": 1,
-            "hide": "button, footer, a"}
-
-          plugin_skyline_year: current-year
-          plugin_stars: yes
-          plugin_stars_limit: 4
+          plugin_lines_sections: base
           plugin_wakatime: yes
           plugin_wakatime_days: 7
-          plugin_wakatime_languages_ignored: html,css,less
-          plugin_wakatime_languages_other: yes
+          plugin_wakatime_languages_ignored: html,css, less
           plugin_wakatime_limit: 5
           plugin_wakatime_repositories_visibility: public
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: BGLB
-          repositories_forks: yes
