--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -23,17 +23,26 @@ jobs:
           #  - read:packages (for some packages related data)
           #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
-          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
-          
+
           # Options
           user: bangenlanbai
           template: classic
           base: header, activity, community, repositories, metadata
+          base_hireable: yes
+          base_indepth: yes
+          base_skip: yes
           config_octicon: yes
           config_timezone: Asia/Shanghai
           config_twemoji: yes
+          plugin_code: yes
+          plugin_code_days: 3
+          plugin_code_languages: python
+          plugin_code_lines: 12
+          plugin_code_load: 400
+          plugin_code_visibility: public
           plugin_habits: yes
-          plugin_habits_charts_type: classic
+          plugin_habits_charts: yes
+          plugin_habits_charts_type: chartist
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_from: 200
@@ -58,6 +67,17 @@ jobs:
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
+          plugin_skyline: yes
+          plugin_skyline_frames: 60
+          plugin_skyline_quality: 0.5
+          plugin_skyline_settings: {
+  "url": "https://skyline.github.com/${login}/${year}",
+  "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
+  "wait": 1,
+  "hide": "button, footer, a"
+}
+
+          plugin_skyline_year: current-year
           plugin_wakatime: yes
           plugin_wakatime_days: 7
           plugin_wakatime_languages_ignored: html,css, less
@@ -66,4 +86,3 @@ jobs:
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: BGLB
-          
