--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -24,8 +24,6 @@ jobs:
           #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
-          output_action: gist
-          committer_gist: ${{ secrets.GIST }}
           # Options
           user: bangenlanbai
           template: classic
@@ -53,7 +51,7 @@ jobs:
           plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_ignored: html,css, less
+          plugin_languages_ignored: html,css,less,scss
           plugin_languages_limit: 8
           plugin_languages_other: yes
           plugin_languages_recent_categories: markup, programming
@@ -70,11 +68,18 @@ jobs:
           plugin_lines_sections: repositories, history
           plugin_skyline: yes
           plugin_skyline_frames: 60
-          plugin_skyline_quality: 0.5
+          plugin_skyline_quality: 1
           plugin_skyline_year: current-year
+          plugin_skyline_settings: |
+            {
+              "url": "https://honzaap.github.io/GithubCity?name=${login}&year=${year}",
+              "ready": "[...document.querySelectorAll('.display-info span')].map(span => span.innerText).includes('${login}')",
+              "wait": 4,
+              "hide": ".github-corner, .footer-link, .buttons-options, .mobile-rotate, .display-info span:first-child"
+            }
           plugin_wakatime: yes
           plugin_wakatime_days: 7
-          plugin_wakatime_languages_ignored: html,css, less
+          plugin_wakatime_languages_ignored: html,css,less,scss
           plugin_wakatime_limit: 5
           plugin_wakatime_repositories_visibility: public
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
