--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -66,17 +66,17 @@ jobs:
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: repositories, history
-          plugin_skyline: yes
-          plugin_skyline_frames: 60
-          plugin_skyline_quality: 1
-          plugin_skyline_year: current-year
-          plugin_skyline_settings: |
-            {
-              "url": "https://honzaap.github.io/GithubCity?name=${login}&year=${year}",
-              "ready": "[...document.querySelectorAll('.display-info span')].map(span => span.innerText).includes('${login}')",
-              "wait": 4,
-              "hide": ".github-corner, .footer-link, .buttons-options, .mobile-rotate, .display-info span:first-child"
-            }
+#           plugin_skyline: yes
+#           plugin_skyline_frames: 60
+#           plugin_skyline_quality: 1
+#           plugin_skyline_year: current-year
+#           plugin_skyline_settings: |
+#             {
+#               "url": "https://honzaap.github.io/GithubCity?name=${login}&year=${year}",
+#               "ready": "[...document.querySelectorAll('.display-info span')].map(span => span.innerText).includes('${login}')",
+#               "wait": 4,
+#               "hide": ".github-corner, .footer-link, .buttons-options, .mobile-rotate, .display-info span:first-child"
+#             }
           plugin_wakatime: yes
           plugin_wakatime_days: 7
           plugin_wakatime_languages_ignored: html,css,less,scss
